--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  extended_image: ^8.0.2
+  dio: ^5.4.3+1
+  internet_connection_checker: ^1.0.0+1
+  get_it: ^7.7.0
+  provider: ^6.1.2
+  dartz: ^0.10.1
+  shared_preferences: ^2.2.3
+  overlay_support: ^2.1.0
+  flutter_svg: ^2.0.10+1
+  flutter_form_builder: ^9.4.1
+  form_builder_validators: ^10.0.1
+  flutter_screenutil: ^5.9.1
+  lottie: ^3.1.2
+  easy_localization: ^3.0.5
+  custom_refresh_indicator: ^4.0.1
+  pinput: ^5.0.0
+  freezed_annotation:
 
 dev_dependencies:
   flutter_test:
@@ -42,37 +59,26 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add Flutter specific assets to your application, add an assets section,
-  # like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/translations/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add Flutter specific custom fonts to your application, add a fonts
-  # section here, in this "flutter" section. Each entry in this list should
-  # have a "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/Cairo/Cairo-Regular.ttf
+        - asset: assets/fonts/Cairo/Cairo-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Cairo/Cairo-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Cairo/Cairo-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Cairo/Cairo-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Cairo/Cairo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Cairo/Cairo-SemiBold.ttf
+          weight: 600
 
 
   # This section identifies your Flutter project as a module meant for
